--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -1,6 +1,6 @@
 @import '../../colors.scss';
 
-form {
+#register_form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -10,7 +10,7 @@ form {
     background-color: $principal_color;
     padding: 1em;
     border-radius: 0.5em;
-    height: 200vh;
+    height: 60vh;
     -webkit-box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73); 
     box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73);
 }
