--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,18 +5,64 @@
     align-items: center;
     text-align: justify;
     font-size: 15px;
+    width: 100%;
+    margin:0;
+}
+
+.pics_container {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .profile-pic {
-    width:30%;
-    height:30%;
+    width:160px;
+    height:160px;
     border-radius:160px;
     position:absolute;
-    z-index:1
+    z-index:1;
+    // left: 0;
+    border: 3px solid white;
+
 }
 
 .banner-pic {
     position:absolute;
     z-index: 0;
-    width: 100%;
+    width: 97%;
+    // left:0;
+    max-height: 30%;
+    margin-top: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+@media only screen and (min-width: 700px){
+    .profile {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: justify;
+        font-size: 15px;
+        width: 100%;
+    }
+    
+    .profile-pic {
+        width:180px;
+        height:180px;
+        border-radius:160px;
+        position:absolute;
+        z-index:1;
+        left: 0;
+    }
+    
+    .banner-pic {
+        position:absolute;
+        z-index: 0;
+        width: 90%;
+        left:0;
+        max-height: 35%;
+    }
 }
