--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,2 +1,2 @@
-$principal_color: rgb(94, 112, 219);
-$principal_background: rgb(216, 221, 247);
+$principal_color: transparent;
+$principal_background: transparent;
