--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -4,35 +4,50 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 40%;
+    width: 45%;
     min-height: 25vh;
     margin: auto;
+    max-width: 352px;
     background-color: $principal_color;
     padding: 1em;
     border-radius: 0.5em;
-    height: 60vh;
-    -webkit-box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73); 
-    box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73);
+    height: 70vh;
+    -webkit-box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60); 
+    box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60);
+    text-align: left;
 }
 
 form input{
     all: unset;
     background-color: white;
     padding: 1em;
-    border-radius: 1em;
+    border-radius: 0.5em;
     color: black;
+    border: solid 1px rgb(43, 42, 42)
 }
 form button{
     all: unset;
-    background-color: blue;
+    background-color: #0a66c2;
     padding: 1em;
-    border-radius: 1em;
+    border-radius: 1.8em;
     color: white;
     cursor: pointer;
+    text-align: center;
 }
 .form_container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     height: 100vh;
+}
+
+.welcome-container h1 {
+    color: #8F5849;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 200;
+}
+
+a {
+    color: #0a66c2;
 }
