--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 1em;
     background-color: $principal_color;
     color: white !important;
@@ -13,15 +13,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
 .header div span{
     margin: 1em;
 }
 
-a {
-    all: unset;
-    cursor: pointer;
-    color: #00000099 !important;
-}
+
 
 .header span a button {
     border-radius: 160px;
@@ -30,5 +27,15 @@ a {
     cursor: pointer;
     border: solid 1px #0a66c2;
     font-weight: 550;
+    padding: 0.5em
+}
 
+a {
+    all: unset;
+    cursor: pointer;
+    color: #00000099 !important;
+}
+
+.logo {
+    padding-left: 80px;
 }
