--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -15,6 +15,15 @@ form{
     -webkit-box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60); 
     box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60);
     text-align: left;
+    margin-top: 0;
+}
+
+.firstp {
+    text-align: left !important;
+}
+
+.secondp {
+    text-align: center;
 }
 
 form input{
@@ -48,6 +57,8 @@ form button{
     font-weight: 200;
 }
 
-a {
-    color: #0a66c2;
+.link {
+    color: #0a66c2 !important;
+    font-weight: 550;
+    text-align: left !important;
 }
