--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -5,23 +5,25 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 50%;
+    width: 70%;
     min-height: 25vh;
-    margin: auto;
+    // margin: auto;
     background-color: $principal_color;
     padding: 1em;
     border-radius: 0.5em;
-    height: 60vh;
-    -webkit-box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73); 
-    box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.73);
+    height: 70vh;
+    -webkit-box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60); 
+    box-shadow: 0px 3px 12px 1px rgba(0,0,0,0.60);
+    margin-top: 0;
 }
 
 form input{
     all: unset;
     background-color: white;
-    padding: 1em;
+    padding: 0;
     border-radius: 1em;
     color: black;
+    margin:10px
 }
 
 .submit-button{
@@ -29,7 +31,7 @@ form input{
     background-color: #0a66c2;
     padding: 1em;
     border-radius: 1.8em;   
-     color: white;
+    color: white;
     cursor: pointer;
     text-align: center;
 }
@@ -55,5 +57,5 @@ form input{
 }
 
 p {
-    text-align: center;
+    text-align: center !important;
 }
