--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -1,10 +1,24 @@
 .welcome-container {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .welcome-container h1 {
     font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
     font-size: 56px;
     font-weight: 200;
+}
+
+.welcome-phrase {
+    text-align:left;
+    width: 50%;
+    padding: 0 0 0 100px;
+}
+
+.img-container {
+    width: 50%;
+    margin:0;
+    padding: 0;
+    overflow: hidden;
 }
