header's icons implemented

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -43,3 +43,9 @@ a {
 .search_bar {
     color: #00000099;
 }
+
+.profile-picture {
+    width: 30px;
+    height: 30px;
+    border-radius: 160px;
+}
