--- a/src/components/Home/Posts/AddPost/AddPost.scss
+++ b/src/components/Home/Posts/AddPost/AddPost.scss
@@ -1,3 +1,6 @@
+@import '../../../../colors.scss';
+
+
 .create_container {
     width: 100%;
     margin: 0;
@@ -11,6 +14,8 @@
     text-align: center;
     width: 60%;
     max-width: 80% !important;
+    background-color: #FFFFFF;
+    margin: 10px;
 }
 
 #body {
