--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,12 +13,9 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
 .header div span{
     margin: 1em;
 }
-
-
 
 .header span a button {
     border-radius: 160px;
@@ -48,4 +45,8 @@ a {
     width: 30px;
     height: 30px;
     border-radius: 160px;
+}
+
+.mini_logo {
+    margin-left: 80px;
 }
