--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,10 +5,20 @@
     align-items: center;
     text-align: justify;
     font-size: 15px;
+    height: 100vh;
     width: 100%;
     margin:0;
+    background-color: #F3F2EF;
 }
 
+.posts-profile-container {
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
+    box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
+    min-width: 60%;
+    height: 20vh;
+    margin: 20px;
+}
 .pics_container {
     display:flex;
     flex-direction: column;
