adding some styles

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,20 +5,19 @@
     align-items: center;
     text-align: justify;
     font-size: 15px;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin:0;
     background-color: #F3F2EF;
 }
 
-.posts-profile-container {
-    background-color: #FFFFFF;
+div.post {
     -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
+    border: 2px solid black;
     box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
-    min-width: 60%;
-    height: 20vh;
-    margin: 20px;
+    background-color: #FFFFFF;
 }
+
 .pics_container {
     display:flex;
     flex-direction: column;
@@ -48,6 +47,11 @@
     border-top-right-radius: 10px;
 }
 
+.post-container {
+    width: 80%;
+    height: 30%;
+    overflow: hidden;
+}
 @media only screen and (min-width: 700px){
     .profile {
         display: flex;
