--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -12,9 +12,8 @@
 }
 
 div.post {
-    -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
-    border: 2px solid black;
-    box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
+    // -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
+    // box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
     background-color: #FFFFFF;
 }
 
