welcome screen fixed

--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -10,6 +10,9 @@
     font-weight: 200;
 }
 
+// .img {
+//     width: 100%;
+// }
 .welcome-phrase {
     text-align:left;
     width: 50%;
@@ -21,8 +24,34 @@
     margin:0;
     padding: 0;
     overflow: hidden;
+    float: left;
+}
+
+ul {
+    text-align: left;
+    padding: 0;
 }
 
 li {
-    all: unset;
+    list-style:none;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    width: 70%;
+    text-align: left;
+    padding: 16px;
+    margin-top: 10px;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
+li:hover {
+    -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
+    box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
+}
+
+.arrow {
+    text-align: rigth;
 }
