--- a/src/components/Home/Posts/Post/Post.scss
+++ b/src/components/Home/Posts/Post/Post.scss
@@ -11,15 +11,36 @@
 }
 
 #post-container {
-    background-color: #FFFFFF !important;
+    background-color: #FFFFFF;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
-    box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
+    // -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
+    // box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
     width: 60%;
-    height: 20vh;
+    height: auto;
     margin: 20px;
-
+    border: 1px solid #E0DFDC;
+    border-radius: 12px;
+    padding: 15px;
 } 
+.interactions {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#user {
+    font-weight: 800;
+}
+
+.profile-picture {
+    width: 25px;
+    height: 25px;
+    border-radius: 160px;
+}
+
+.user-reference {
+    width: 100%;
+}
