--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,16 +5,15 @@
     align-items: center;
     text-align: justify;
     font-size: 15px;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     margin:0;
-    background-color: #F3F2EF;
 }
 
-div.post {
+.post-profile {
     // -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
     // box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
-    background-color: #FFFFFF;
+    background-color: #F3F2EF;
 }
 
 .pics_container {
@@ -39,7 +38,6 @@ div.post {
     position:absolute;
     z-index: 0;
     width: 97%;
-    // left:0;
     max-height: 30%;
     margin-top: 5px;
     border-top-left-radius: 10px;
