--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,14 +5,14 @@
     align-items: center;
     text-align: justify;
     font-size: 15px;
-    height: 100vh;
+    height: auto;
     width: 100%;
     margin:0;
+    background-color: #F3F2EF;
+
 }
 
 .post-profile {
-    // -webkit-box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14); 
-    // box-shadow: 0px 0px 5px 6px rgba(0,0,0,0.14);
     background-color: #F3F2EF;
 }
 
@@ -45,9 +45,58 @@
 }
 
 .post-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
-    height: 30%;
+    height: auto;
     overflow: hidden;
+    width: 60%;
+    height: auto;
+    margin: 20px;
+    border: 1px solid #E0DFDC;
+    border-radius: 12px;
+    padding: 15px;
+    background-color: #FFFFFF;
+    justify-content: justify;
+}
+
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-reference {
+    width: 100%;
+}
+
+.info-container {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #E0DFDC;
+    border-radius: 12px;
+    padding: 15px;
+    background-color: #FFFFFF;
+    margin: 15px;
+
+}
+
+.profile-picture-big {
+    width:160px;
+    height:160px;
+    margin: 10px;
+    border-radius:160px;
+    border: 3px solid white;
+}
+
+.profile-picture-mini {
+    width: 30px;
+    height: 30px;
+    border-radius: 160px;
 }
 @media only screen and (min-width: 700px){
     .profile {
